added images and functions for buttons

--- a/project1/MalmöFixie-Bootstrap/css/myStyle.css
+++ b/project1/MalmöFixie-Bootstrap/css/myStyle.css
@@ -96,3 +96,11 @@ header {
 .clickable {
     cursor: pointer;
 }
+#fbLogo {
+    height: 100px;
+    width: auto;
+}
+#twitterLogo {
+    height: 100px;
+    width: auto;
+}
